add key to env file

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 JWT_KEY=myKey
+
+MONGODB_URI = mongodb+srv://naomirob:DlVnuYvV8MOqDFcz@cluster0.aszkq.mongodb.net/Vaccine_Tracker?retryWrites=true&w=majority
